[gd_scene load_steps=6 format=2]

[ext_resource path="res://Systems/SceneChanger.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/gmae.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/YosterFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Levels/World.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 5 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[node name="Level" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Objects" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="Node2D" parent="Objects"]
__meta__ = {
"_edit_lock_": true
}

[node name="Boxes" type="Node2D" parent="Objects"]
__meta__ = {
"_edit_lock_": true
}

[node name="Spots" type="Node2D" parent="Objects"]
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="UI"]
margin_left = 112.0
margin_top = 64.0
margin_right = 218.0
margin_bottom = 128.0
window_title = "=D"
dialog_text = "Level Cleared!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="UI"]
margin_right = 49.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesLabel" type="Label" parent="UI"]
margin_top = 16.0
margin_right = 52.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 5 )
text = "Moves: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneChanger" parent="." instance=ExtResource( 1 )]

[node name="Completed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="confirmed" from="UI/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
